# rot13-slint

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: BundleMacOS.cmake  BundleWindows.cmake
resources/: rot13.icns  rot13.rc
src/: main.cpp
ui/: app-window.slint
